# example-sea-query-axum

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yaml
migrations/: 20250507103119_create_users.up.sql  20250507103208_create_categories.up.sql  20250507103254_create_posts.up.sql  20250507103258_create_comments.down.sql  20250507103258_create_comments.up.sql
src/: lib.rs  main.rs  state.rs
src/abstract_trait/: auth.rs  category.rs  comment.rs  file.rs  mod.rs  post.rs  user.rs
src/config/: database.rs  hashing.rs  jwt.rs  mod.rs
src/domain/: mod.rs
src/domain/request/: auth.rs  category.rs  comment.rs  mod.rs  post.rs  user.rs
src/domain/response/: category.rs  comment.rs  file.rs  mod.rs  pagination.rs  post.rs  user.rs
src/handler/: auth.rs  category.rs  comments.rs  mod.rs  posts.rs  user.rs
src/middleware/: jwt.rs
src/model/: category.rs  comment.rs  mod.rs  posts.rs  user.rs
src/repository/: category.rs  comment.rs  mod.rs  posts.rs  user.rs
src/schema/: category.rs  comment.rs  mod.rs  posts.rs  user.rs
src/service/: auth.rs  category.rs  comment.rs  file.rs  mod.rs  posts.rs  user.rs
src/utils/: di.rs  errors.rs  log.rs  mod.rs  slug.rs
